# ClaimSense

./: .gitignore  PROJECT_JOURNEY.md  README.md  generate_documents.py  generate_pdf.py  generate_resume.py  render.yaml
.github/workflows/: azure-deploy.yml  gh-pages.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  store.py
backend/app/models/: schemas.py
backend/app/routes/: ai_routes.py  analytics_routes.py  claim_routes.py
backend/app/services/: ai_service.py  pdf_service.py
docs/: README.md
