[tool.poetry]
name = "insurance-claim-processor"
version = "0.1.0"
description = "AI-powered insurance claim processing"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
anthropic = "^0.40.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pypdf = "^3.17.0"
fpdf = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"